# senior-project

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: build.yml  build_dependencies.yml
resource/: myplugineditor.uidesc  view.uidesc
scripts/: build.ps1  build_deps.ps1  clean.ps1  editorhost.ps1  generate.ps1
scripts/profiling/: profile.py
source/: SharedMemoryData.h  SharedMemoryWriter.cpp  SharedMemoryWriter.h  SineOscillator.h  VSTController.cpp  VSTProcessor.cpp  VSTProcessor.h  cids.h  main.cpp  makefile  myplugincids.h  myplugincontroller.cpp  myplugincontroller.h  mypluginentry.cpp  mypluginprocessor.cpp  mypluginprocessor.h  version.h
source/Visualizer/: FFT.cpp  FFT.h  README.md  SharedMemoryReader.cpp  SharedMemoryReader.h  Visualizer.cpp  Visualizer.h  shmemtest.cpp
source/Visualizer/deprecated/: Readme.txt  Writer.cpp  main.cpp  makefile
source/Visualizer/deprecated/Demo/shmem/: Reader.cpp
source/audio/: ADSR.cpp  ADSR.h  Oscillator.cpp  Oscillator.h  SineWaveTable.cpp  SineWaveTable.h  Synthesizer.cpp  Synthesizer.h  Voice.cpp  Voice.h  constants.h
source/ui/: UIView.h
source/utils/: Logger.cpp  Logger.h  Timer.cpp  Timer.h  conv.h
